@@ -7,4 +7,4 @@ Terminal=false
 X-MultipleArgs=false
 Type=Application
 StartupNotify=true
-Categories=System;
+Categories=Ailurus;
