@@ -1,0 +1,4 @@
+[Desktop Entry]
+Type=Directory
+Name=AilurusFunctions
+Icon=/usr/share/ailurus/data/suyun_icons/shortcut.png
