@@ -34,6 +34,8 @@ Features:
       packages = ['ailurus', 'ailurus.common', 'ailurus.gnome', 'ailurus.fedora', 'ailurus.ubuntu', 'ailurus.support', ],
       data_files = [
         ('share/man/man1/', ['ailurus.1']),
+        ('share/desktop-directories', ['ailurus.directory']),
+        ('/etc/xdg/menus/applications-merged', ['ailurus.menu']),
         ('share/applications/', ['ailurus-recovery.desktop', 'ailurus-information.desktop',
                                  'ailurus-clean-up.desktop', 'ailurus-install-software.desktop',
                                  'ailurus.desktop', 'ailurus-fastest-repository.desktop', 'ailurus-system-setting.desktop'
